주문 스키마 생성
